Add images to post

--- a/posts/gsoc-2020.md
+++ b/posts/gsoc-2020.md
@@ -5,6 +5,7 @@ summary: 'A summary of achievements made through the Google Summer of Code progr
 date: 'August 25, 2020'
 feature-image: https://dev-to-uploads.s3.amazonaws.com/i/ipx5ny8mfukw20tlqcmp.png
 ---
+<img src="/blog/images/tikv.png" width="100%">
 The [project proposal](https://drive.google.com/file/d/1_noqqI6e2nhQ3FFz-290K0OgzB7soN7u/view?usp=sharing) I had submitted aimed to take [TiKV](https://github.com/tikv/tikv) closer to full cloud native support. A vague understanding of the project allowed me to put forward the idea of supporting cloud based data stores such as AWS S3 to the TiKV storage engine, i.e. rocksdb, by making use of the [rocksdb-cloud](https://github.com/rockset/rocksdb-cloud) library. The ideas put forward by the team at TiKV also helped to better formulate a plan that has been worked on through various PRs to the sister projects that associate with the storage component of the Database. The main issue being worked on was initiated well before the GSoC project started and can be found at [tikv/tikv#6506](https://github.com/tikv/tikv/issues/6506).
 
 during the community boding period, [Yi Wu(@yiwu-arbug)](https://github.com/yiwu-arbug) ideated further on the project with [Liu Wei(@little-wallace)](https://github.com/little-wallace), who compiled a [document with details about the desired results from the project](https://docs.google.com/document/d/1rEmexICjwWe02XHWOGqNBs6zA6QpFh11d-XBt5Pvp8M/edit?usp=sharing), while I was making use of the time to go through the [documentation](https://tikv.org/docs) and do compilations, tests, etc, getting familiarized with the code as well as resulting in a few PRs to fix write-ups at [tikv#6740](https://github.com/tikv/tikv/pull/6740) and [tikv/website#161](https://github.com/tikv/website/pull/161).
